# turok

./: .env.example  README.md  main.py  pyproject.toml  tui.py
core/: __init__.py  models.py  search.py
core/analyzer/: __init__.py  analyzer.py  detectors.py  validator.py
core/config/: __init__.py  manager.py  schema.py
core/sources/: __init__.py  audiostorrent.py  base.py  dynamic.py  piratebay.py  rarbg.py  x1337.py
ui/: __init__.py  app.py  styles.tcss
ui/screens/: __init__.py  help.py  main.py
ui/widgets/: __init__.py  details.py  footer.py  header.py  results.py
