[project]
name = "turok"
version = "0.1.0"
description = "CLI torrent search via Jackett"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "textual>=0.50.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
turok = "main:main"
turok-tui = "tui:main"

[tool.setuptools.packages.find]
include = ["core*", "ui*"]

[tool.setuptools]
py-modules = ["main", "tui"]
